# trace-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: aabb.cpp  aabb.h  assimp_tools.cpp  assimp_tools.h  bvh.cpp  bvh.h  const.h  convert.h  light.h  main.cpp  mesh.cpp  mesh.h  mesh.inl  mesh_instance.cpp  mesh_instance.h  model.cpp  model.h  obj_file.cpp  obj_file.h  png_helper.c  png_helper.h  render.cpp  render.h  scene.cpp  scene.h  trace.cpp  trace.h  types.h
